--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 		</section>
 		<section class="assesment">
 			<div class="assesment__help split-section">
-				<img class="split-section__img" src="/dist/assets/img/help.png" alt="" />
+				<img class="split-section__img" src="dist/assets/img/help.png" alt="" />
 				<div class="split-section__main">
 					<p class="split-section__info">YOU SHOULD ALSO KNOW</p>
 					<div class="split-section__content">
@@ -157,7 +157,7 @@
 				</div>
 			</div>
 			<div class="assesment__contact split-section split-section--reverse">
-				<img class="split-section__img" src="/dist/assets/img/contact-man.png" alt="" />
+				<img class="split-section__img" src="dist/assets/img/contact-man.png" alt="" />
 				<div class="split-section__main">
 					<p class="split-section__info">CONTACT US</p>
 					<div class="split-section__content">
